Better windows support and better diagnostics